dimension air pressure sea levels are configurable